--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,7 +24,13 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
+  fidOrange:  #fe9400,
+  fidBlue:    #002060,
+  fidGrey:    #afabab,
+  fidWhite:   #ffffff,
+  fidBlack:   #000000,
+  //primary:    #387ef5,
+  primary:    #fe9400,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
