--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -16,5 +16,5 @@
 // automatically applied to the <body> element in the app.
 
 ion-content{
-    background-image: url('../../www/assets/images/background.png');
+    background-image: url('../assets/images/background.png');
 }
