--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,8 +1,47 @@
 page-home {
 
-  .ion-navbar {
-    background-color: fidOrange;
-    color: fidWhite;
+  @import "../../theme/variables.css";
+
+
+.toolbar-background {
+  background-color: #fe9400;
+}
+
+.toolbar-title {
+  color : white
+}
+
+.bar-button-default {
+  color : white
+}
+
+  form {
+    margin-bottom: 32px;
+    button {
+      margin-top: 20px;
+    }
+  }
+
+
+  p {
+    font-size: 0.8em;
+    color: #d2d2d2;
+  }
+
+  ion-label {
+    margin-left: 5px;
+  }
+
+  ion-input {
+    padding: 5px;
+  }
+
+  .invalid {
+    border-bottom: 1px solid #FF6153;
+  }
+
+  .error-message .item-inner {
+    border-bottom: 0 !important;
   }
 
 }
