--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -4,9 +4,9 @@ page-signup {
     overflow: hidden;
   }
 
-  // ion-content{
-  //   background-image: url('../assets/images/background/background15.png') !important;
-  // }
+  ion-content{
+    background-image: url('../assets/images/background/background15.png') !important;
+  }
 
   form {
     margin-bottom: 32px;
