--- a/src/pages/reset-password/reset-password.scss
+++ b/src/pages/reset-password/reset-password.scss
@@ -1,8 +1,8 @@
 page-reset-password {
 
-  // ion-content{
-  //   background-image: url('../assets/images/background/background15.png') !important;
-  // }
+  ion-content{
+    background-image: url('../assets/images/background/background15.png') !important;
+  }
 
   .no-scroll .scroll-content{
     overflow: hidden;
