--- a/src/pages/item-detail/item-detail.scss
+++ b/src/pages/item-detail/item-detail.scss
@@ -21,9 +21,9 @@ page-item-detail {
   text-align: center;
 }
 
-ion-content{
-    background-image: url('../assets/images/background/background30.png') !important;
-}
+// ion-content{
+//     background-image: url('../assets/images/background/background30.png') !important;
+// }
 
 // .my-background{
 //     background-image: url('../assets/images/background/background30.png') !important;
