--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -10,9 +10,9 @@ page-login {
     overflow: hidden;
   }
 
-  ion-content{
-    background-image: url('../assets/images/background/background15.png') !important;
-  }
+  // ion-content{
+  //   background-image: url('../assets/images/background/background15.png') !important;
+  // }
 
   form {
     margin-bottom: 32px;
