Commit 11 - Google Map

--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -2,6 +2,10 @@ page-map {
 
   @import "../../theme/variables.scss";
 
+  .scroll {
+    height: 100%
+  }
+
   .toolbar-background {
     background-color: color($colors, fidOrange);
   }
