Commit 27 - Demo coins

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,6 +7,28 @@ page-home {
   //   //background-image: url('../assets/images/background/background75.png') !important;
   // }
 
+//   ion-modal {
+//     padding: 30px;
+//     background: rgba(0,0,0,0.5);
+// }
+// ion-modal {
+// position: absolute;
+// top: 80px;
+// left: 45px;
+// display: block;
+// width: 70%;
+// height: 62%;
+// }
+//
+// .modal-wrapper {
+// position: absolute;
+// top: 80px;
+// left: 45px;
+// display: block;
+// width: 70%;
+// height: 62%;
+// }
+
 .greyBar {
   background-color: color($colors, fidGrey);
   text-align: center;
