--- a/src/pages/receive-coins/receive-coins.scss
+++ b/src/pages/receive-coins/receive-coins.scss
@@ -2,10 +2,26 @@ page-receive-coins {
 
   @import "../../theme/variables.scss";
 
-  // ion-content{
-  //   background-image: url('../assets/images/background/background30.png') !important;
+  // ion-modal {
+  //   padding: 30px;
+  //   background: rgba(0,0,0,0.5);
   // }
-
+//   ion-modal {
+// position: absolute;
+// top: 80px;
+// left: 45px;
+// display: block;
+// width: 70%;
+// height: 62%;
+// }
+//   .modal-wrapper {
+// position: absolute;
+// top: 80px;
+// left: 45px;
+// display: block;
+// width: 70%;
+// height: 62%;
+// }
 
   .toolbar-background {
   //background-color: color($colors, fidOrange);
