--- a/src/pages/receive-coins/receive-coins.scss
+++ b/src/pages/receive-coins/receive-coins.scss
@@ -24,16 +24,16 @@ page-receive-coins {
 // }
 
   .toolbar-background {
-  //background-color: color($colors, fidOrange);
+  //background-color: color($colors, fidLightGrey);
     background-color: transparent;
   }
 
   .toolbar-title {
-    color : white
+    color: white;
   }
 
   .bar-button-default {
-    color : white
+    color: white;
   }
 
   //Test pour aligner les éléments contenus dans les items de la liste
