--- a/src/pages/update/update.scss
+++ b/src/pages/update/update.scss
@@ -9,16 +9,16 @@ ion-content{
 
 
 .toolbar-background {
-  //background-color: color($colors, fidOrange);
+  //background-color: color($colors, fidLightGrey);
   background-color: transparent;
 }
 
 .toolbar-title {
-  color : white
+  color: color($colors, fidDarkGrey) !important;
 }
 
 .bar-button-default {
-  color : white
+  color: color($colors, fidDarkGrey) !important;
 }
 
 //Test pour aligner les éléments contenus dans les items de la liste
