--- a/src/pages/send-coins/send-coins.scss
+++ b/src/pages/send-coins/send-coins.scss
@@ -1,4 +1,4 @@
-page-send-coins {
+fidLightGreypage-send-coins {
 
   @import "../../theme/variables.scss";
 
@@ -8,16 +8,16 @@ page-send-coins {
 
 
 .toolbar-background {
-  //background-color: color($colors, fidOrange);
+  //background-color: color($colors, fidLightGrey);
   background-color: transparent;
 }
 
 .toolbar-title {
-  color : white
+  color: white;
 }
 
 .bar-button-default {
-  color : white
+  color: white;
 }
 
 //Test pour aligner les éléments contenus dans les items de la liste
