--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -27,10 +27,13 @@ $colors: (
   fidOrange:  #fe9400,
   fidBlue:    #002060,
   fidGrey:    #afabab,
+  fidLightGrey:#f2f2f2,
+  fidDarkGrey:#404040,
   fidWhite:   #ffffff,
   fidBlack:   #000000,
   //primary:    #387ef5,
-  primary:    #fe9400,
+  //primary:    #fe9400,
+  primary:    #404040,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
