--- a/src/pages/reward/reward.scss
+++ b/src/pages/reward/reward.scss
@@ -13,11 +13,11 @@ page-reward {
   }
 
   .toolbar-title {
-    color: color($colors, fidDarkGrey) !important;
+    color: white !important;
   }
 
   .bar-button-default {
-    color: color($colors, fidDarkGrey) !important;
+    color: white !important;
   }
 
   //Test pour aligner les éléments contenus dans les items de la liste
